Updated laraquick depencency to ^3.0

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "tymon/jwt-auth": "dev-develop",
         "dingo/api": "2.0.0-alpha1",
         "barryvdh/laravel-cors": "^0.9.3",
-        "d-scribe/laraquick": ">=2.0"
+        "d-scribe/laraquick": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
